--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "mocha-lcov-reporter": "^1.3.0"
   },
   "scripts": {
-    "lint": "eslint",
-    "start": "node server.js",
-    "cover": "istanbul cover _mocha",
-    "test": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+  "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+  "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls ",
+  "debug": "DEBUG=turnipVentures* npm run test",
+  "lint": "./node_modules/eslint/bin/eslint.js .",
+  "start": "node server.js"
   },
   "author": "Patrick Sheridan",
   "license": "MIT"
