--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGODB_URI='mongodb://localhost/bizapp'
 APP_SECRET='SEEEEKRET'
 AWS_BUCKET='patrick-lab-18'
 AWS_ACCESS_KEY_ID='AKIAJKRB42FJCA4UDYMA'
-AWS_SECRET_ACCESS_KEY='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
+AWS_SECRET_ACCESS_KEY='W42k5IR3gZWmPpTkL781lJBaMqSEwdnV3JanKYuY'
