--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^4.9.8",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -31,11 +32,11 @@
     "mocha-lcov-reporter": "^1.3.0"
   },
   "scripts": {
-  "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
-  "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls ",
-  "debug": "DEBUG=turnipVentures* npm run test",
-  "lint": "./node_modules/eslint/bin/eslint.js .",
-  "start": "node server.js"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls ",
+    "debug": "DEBUG=turnipVentures* npm run test",
+    "lint": "./node_modules/eslint/bin/eslint.js .",
+    "start": "node server.js"
   },
   "author": "Patrick Sheridan",
   "license": "MIT"
