meet up api route working

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
+API_KEY='797c4f5f5f4f5b1066186353e70276b'
 MONGODB_URI='mongodb://localhost/bizapp'
 APP_SECRET='SEEEEKRET'
 AWS_BUCKET='patrick-lab-18'
