--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
+    "jquery": "^3.2.1",
     "mocha": "^3.3.0",
     "mocha-lcov-reporter": "^1.3.0"
   },
