--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.9.8",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "request-promise": "^4.2.1",
     "superagent": "^3.5.2",
     "uuid": "^3.0.1"
   },
