--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ APP_SECRET='SEEEEKRET'
 AWS_BUCKET='patrick-lab-18'
 AWS_ACCESS_KEY_ID='AKIAJKRB42FJCA4UDYMA'
 AWS_SECRET_ACCESS_KEY='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'
+REPO_TOKEN: QiGZzM5vQlO0OEmvhj9Ja1EOLEzQqeUTF
